# ZorkBot

./: Cargo.toml  config.toml
src/: config.rs  game_manager.rs  irc.rs  main.rs  zmachine.rs
src/z/: buffer.rs  frame.rs  instruction.rs  mod.rs  quetzal.rs  traits.rs  zmachine.rs
