[package]
name = "zbot"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
irc = "0.15"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
walkdir = "2.3"
infer = "0.13"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
regex = "1.11.1"
atty = "0.2.14"
lazy_static = "1.5.0"
terminal_size = "0.4.1"
base64 = "0.22.1"
rand = "0.8.5"
serde_json = "1.0.138"
futures-util = "0.3"

[dependencies.enum_primitive]
version = "0.1.1"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"